--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html xml:lang="ru" lang="ru">
- <head>
+<head>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Сайт думы"> 
 	<meta name="Keywords" content="Ульяновская дума">
-  <title>Дума</title>
+    <title>Дума</title>
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<script src="js/script.js"></script>
   
- </head>
- <body>
-  <p>Страница на HTML5</p>
- </body>
+  
+</head>
+<body>
+<p>Страница на HTML5</p>
+</body>
 </html>
