шапка и левая сторона

--- a/index.html
+++ b/index.html
@@ -14,6 +14,52 @@
   
 </head>
 <body>
-<p>Страница на HTML5</p>
+<header>
+    <div class="logo-block">
+        <img src="img/logo.png" alt="Ульяновская городская дума">
+    </div>
+    <div class="head-block">
+        <img class="head-block__image" src="img/25year.jpg" alt="25 лет">
+        <p class="head-block__text">Перспективный план работы<br>Ульяновской Городской Думы<br>на II полугодие 2021 года</p>
+        <p class="head-block__text">Бюджет г.Ульяновска 2021-2023</p>
+        <p class="head-block__text">О мерах по реализации<br>инициативных проектов на<br>территории муниципального<br>образования «город Ульяновск»</p>
+        <div class="head-block__contacts">
+            <a class="head-block__telephone" href="tel:+78422413800"><img src="img/icons/phone.svg" alt="телефон"> 8 (8422) 41-38-00</a>
+            <a class="head-block__email" href="mailto:duma@ugd.ru"><img src="img/icons/email.svg" alt="почта"> duma@ugd.ru</a>
+            <a class="head-block__twitter" href="https://twitter.com/duma73" target="_blank"><img src="img/icons/twitter.svg" alt="Твиттер"> duma73</a>
+        </div>
+    </div>
+</header>
+<div class="site-body">
+    <div class="left-side">
+        <form action="#" method="get">
+            <input class="left-side__search"  type="search" placeholder="Поиск по сайту">
+        </form>
+        <nav class="left-side__navigation">
+            <ul>
+                <li><a href="#">О Думе</a></li>
+                <li><a href="#">Депутаты</a></li>
+                <li><a href="#">Деятельность</a></li>
+                <li><a href="#">Приёмная</a></li>
+                <li><a href="#">Комитеты</a></li>
+                <li><a href="#">Молодёжная дума</a></li>
+                <li><a href="#">О городе</a></li>
+            </ul>
+        </nav>
+        <aside class="deputat-left">
+            <img src="img/deputat/nozhechkin.jpg" alt="">
+            <span class="deputat-left__name">Ножечкин<br>Илья Владимирович</span>
+            <span class="deputat-left__position">Председатель Ульяновской<br>Городской Думы</span>
+        </aside>
+        <div class="left-side__contacts">
+            <a class="left-side__telephone" href="tel:+78422413800"><img src="img/icons/phone.svg" alt="телефон"> 8 (8422) 41-38-00</a>
+            <a class="left-side__email" href="mailto:duma@ugd.ru"><img src="img/icons/email.svg" alt="почта"> duma@ugd.ru</a>
+            <a class="left-side__twitter" href="https://twitter.com/duma73" target="_blank"><img src="img/icons/twitter.svg" alt="Твиттер"> duma73</a>
+        </div>
+    </div>
+    <main>
+        qqqq
+    </main>
+</div>
 </body>
 </html>
