--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <!--Slick Slider-->
+    <link rel="stylesheet" type="text/css" href="css/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="css/slick/slick-theme.css">
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="js/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+
+
 	<script src="js/script.js"></script>
   
   
@@ -58,7 +65,20 @@
         </div>
     </div>
     <main>
-        qqqq
+        <section class="main-slider slider">
+            <div>
+                <img src="img/main_slider/1.jpg" alt="">
+            </div>
+            <div>
+                <img src="img/main_slider/1.jpg" alt="">
+            </div>
+            <div>
+                <img src="img/main_slider/1.jpg" alt="">
+            </div>
+            <div>
+                <img src="img/main_slider/1.jpg" alt="">
+            </div>
+        </section>
     </main>
 </div>
 </body>
