--- a/index.html
+++ b/index.html
@@ -8,38 +8,32 @@
     <title>Дума</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
     <!--Slick Slider-->
     <link rel="stylesheet" type="text/css" href="css/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="css/slick/slick-theme.css">
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="js/slick/slick.js" type="text/javascript" charset="utf-8"></script>
-
-
-	<script src="js/script.js"></script>
-  
-  
 </head>
 <body>
 <header>
     <div class="logo-block">
-        <img src="img/logo.png" alt="Ульяновская городская дума">
+        <a href="/" class="logo-block__link">
+            <img src="img/logo.png" alt="Ульяновская городская дума">
+        </a>
     </div>
     <div class="head-block">
         <img class="head-block__image" src="img/25year.jpg" alt="25 лет">
-        <p class="head-block__text">Перспективный план работы<br>Ульяновской Городской Думы<br>на II полугодие 2021 года</p>
+        <p class="head-block__text">Перспективный план работы Ульяновской Городской Думы на II полугодие 2021 года</p>
         <p class="head-block__text">Бюджет г.Ульяновска 2021-2023</p>
-        <p class="head-block__text">О мерах по реализации<br>инициативных проектов на<br>территории муниципального<br>образования «город Ульяновск»</p>
+        <p class="head-block__text">О мерах по реализации инициативных проектов на территории муниципального образования «город Ульяновск»</p>
         <div class="head-block__contacts">
             <a class="head-block__telephone" href="tel:+78422413800"><img src="img/icons/phone.svg" alt="телефон"> 8 (8422) 41-38-00</a>
             <a class="head-block__email" href="mailto:duma@ugd.ru"><img src="img/icons/email.svg" alt="почта"> duma@ugd.ru</a>
-            <a class="head-block__twitter" href="https://twitter.com/duma73" target="_blank"><img src="img/icons/twitter.svg" alt="Твиттер"> duma73</a>
+            <a class="head-block__twitter" href="http://twitter.com/duma73" target="_blank"><img src="img/icons/twitter.svg" alt="Твиттер"> duma73</a>
         </div>
     </div>
 </header>
 <div class="site-body">
     <div class="left-side">
-        <form action="#" method="get">
+        <form action="#" method="GET">
             <input class="left-side__search"  type="search" placeholder="Поиск по сайту">
         </form>
         <nav class="left-side__navigation">
@@ -64,22 +58,44 @@
             <a class="left-side__twitter" href="https://twitter.com/duma73" target="_blank"><img src="img/icons/twitter.svg" alt="Твиттер"> duma73</a>
         </div>
     </div>
-    <main>
+
+    <main class="main"> 
+        <!-- <h1 class="sr-only"></h1> -->
         <section class="main-slider slider">
-            <div>
+            <div class="main-slider__item">
                 <img src="img/main_slider/1.jpg" alt="">
+                <div class="main-slider__info" >
+                    <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
+                    <button class="main-slider__button">Участвовать</button>
+                </div>
             </div>
-            <div>
+            <div class="main-slider__item">
                 <img src="img/main_slider/1.jpg" alt="">
+                <div class="main-slider__info" >
+                    <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
+                    <button class="main-slider__button">Участвовать</button>
+                </div>
             </div>
-            <div>
+            <div class="main-slider__item">
                 <img src="img/main_slider/1.jpg" alt="">
+                <div class="main-slider__info" >
+                    <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
+                    <button class="main-slider__button">Участвовать</button>
+                </div>
             </div>
-            <div>
+            <div class="main-slider__item">
                 <img src="img/main_slider/1.jpg" alt="">
+                <div class="main-slider__info" >
+                    <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
+                    <button class="main-slider__button">Участвовать</button>
+                </div>
             </div>
         </section>
     </main>
 </div>
+<!--Slick Slider-->
+<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+<script src="js/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
