--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
     <title>Дума</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!--Slick Slider-->
-    <link rel="stylesheet" type="text/css" href="css/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="css/slick/slick-theme.css">
+    <!--Swiper Slider-->
+    <link rel="stylesheet" href="css/swiper/swiper-bundle.min.css" />
 </head>
 <body>
 <header>
     <div class="logo-block">
-        <a href="/" class="logo-block__link">
+        <a href="/" class="logo-block__link" rel="noopener">
             <img src="img/logo.png" alt="Ульяновская городская дума">
         </a>
     </div>
     <div class="head-block">
         <img class="head-block__image" src="img/25year.jpg" alt="25 лет">
-        <p class="head-block__text">Перспективный план работы Ульяновской Городской Думы на II полугодие 2021 года</p>
-        <p class="head-block__text">Бюджет г.Ульяновска 2021-2023</p>
-        <p class="head-block__text">О мерах по реализации инициативных проектов на территории муниципального образования «город Ульяновск»</p>
+        <ul class="head-block__list">
+            <li class="head-block__text">Перспективный план работы Ульяновской Городской Думы на II полугодие 2021 года</li>
+            <li class="head-block__text">Бюджет г.Ульяновска 2021-2023</li>
+            <li class="head-block__text">О мерах по реализации инициативных проектов на территории муниципального образования «город Ульяновск»</li>
+        </ul>
         <div class="head-block__contacts">
-            <a class="head-block__telephone" href="tel:+78422413800"><img src="img/icons/phone.svg" alt="телефон"> 8 (8422) 41-38-00</a>
-            <a class="head-block__email" href="mailto:duma@ugd.ru"><img src="img/icons/email.svg" alt="почта"> duma@ugd.ru</a>
-            <a class="head-block__twitter" href="http://twitter.com/duma73" target="_blank"><img src="img/icons/twitter.svg" alt="Твиттер"> duma73</a>
+            <a class="head-block__telephone" href="tel:+78422413800" rel="noopener">8 (8422) 41-38-00</a>
+            <a class="head-block__email" href="mailto:duma@ugd.ru" rel="noopener">duma@ugd.ru</a>
+            <a class="head-block__twitter" href="https://twitter.com/duma73" target="_blank" rel="noreferrer">duma73</a>
         </div>
     </div>
 </header>
@@ -38,13 +39,13 @@
         </form>
         <nav class="left-side__navigation">
             <ul>
-                <li><a href="#">О Думе</a></li>
-                <li><a href="#">Депутаты</a></li>
-                <li><a href="#">Деятельность</a></li>
-                <li><a href="#">Приёмная</a></li>
-                <li><a href="#">Комитеты</a></li>
-                <li><a href="#">Молодёжная дума</a></li>
-                <li><a href="#">О городе</a></li>
+                <li><a href="#" rel="noopener">О Думе</a></li>
+                <li><a href="#" rel="noopener">Депутаты</a></li>
+                <li><a href="#" rel="noopener">Деятельность</a></li>
+                <li><a href="#" rel="noopener">Приёмная</a></li>
+                <li><a href="#" rel="noopener">Комитеты</a></li>
+                <li><a href="#" rel="noopener">Молодёжная дума</a></li>
+                <li><a href="#" rel="noopener">О городе</a></li>
             </ul>
         </nav>
         <aside class="deputat-left">
@@ -53,49 +54,68 @@
             <span class="deputat-left__position">Председатель Ульяновской<br>Городской Думы</span>
         </aside>
         <div class="left-side__contacts">
-            <a class="left-side__telephone" href="tel:+78422413800"><img src="img/icons/phone.svg" alt="телефон"> 8 (8422) 41-38-00</a>
-            <a class="left-side__email" href="mailto:duma@ugd.ru"><img src="img/icons/email.svg" alt="почта"> duma@ugd.ru</a>
-            <a class="left-side__twitter" href="https://twitter.com/duma73" target="_blank"><img src="img/icons/twitter.svg" alt="Твиттер"> duma73</a>
+            <a class="left-side__telephone" href="tel:+78422413800" rel="noopener">8 (8422) 41-38-00</a>
+            <a class="left-side__email" href="mailto:duma@ugd.ru" rel="noopener">duma@ugd.ru</a>
+            <a class="left-side__twitter" href="https://twitter.com/duma73" target="_blank" rel="noopener">duma73</a>
         </div>
     </div>
 
     <main class="main"> 
         <!-- <h1 class="sr-only"></h1> -->
-        <section class="main-slider slider">
-            <div class="main-slider__item">
-                <img src="img/main_slider/1.jpg" alt="">
-                <div class="main-slider__info" >
-                    <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
-                    <button class="main-slider__button">Участвовать</button>
+        <section class="swiper main-slider">
+            <div class="swiper-wrapper">
+                <div class="main-slider__item swiper-slide">
+                    <img data-src="img/main_slider/1.jpg" alt="" class="swiper-lazy">
+                    <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                    <div class="main-slider__info" >
+                        <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
+                        <button class="main-slider__button">Участвовать</button>
+                    </div>
+                </div>
+                <div class="main-slider__item swiper-slide">
+                    <img data-src="img/main_slider/1.jpg" alt="" class="swiper-lazy">
+                    <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                    <div class="main-slider__info" >
+                        <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
+                        <button class="main-slider__button">Участвовать</button>
+                    </div>
+                </div>
+                <div class="main-slider__item swiper-slide">
+                    <img data-src="img/main_slider/1.jpg" alt="" class="swiper-lazy">
+                    <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+                    <div class="main-slider__info" >
+                        <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
+                        <button class="main-slider__button">Участвовать</button>
+                    </div>
                 </div>
             </div>
-            <div class="main-slider__item">
-                <img src="img/main_slider/1.jpg" alt="">
-                <div class="main-slider__info" >
-                    <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
-                    <button class="main-slider__button">Участвовать</button>
-                </div>
+        </section>
+        <section class="content-list">
+            <div class="content-list__tab">
+                <button class="content-list__link" onclick="openTab(event, 'news')">Новости</button>
+                <button class="content-list__link" onclick="openTab(event, 'advertising')">Объявления</button>
+                <button class="content-list__link" onclick="openTab(event, 'invitation')">Приглашения для СМИ</button>
             </div>
-            <div class="main-slider__item">
-                <img src="img/main_slider/1.jpg" alt="">
-                <div class="main-slider__info" >
-                    <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
-                    <button class="main-slider__button">Участвовать</button>
-                </div>
+            <div id="news" class="content-list__content">
+                <h3>Новости</h3>
+                <p>London is the capital city of England.</p>
             </div>
-            <div class="main-slider__item">
-                <img src="img/main_slider/1.jpg" alt="">
-                <div class="main-slider__info" >
-                    <p class="main-slider__text">Викторина ко Дню<br>Народного Единства<br>"Народы России"</p>
-                    <button class="main-slider__button">Участвовать</button>
-                </div>
+            
+            <div id="advertising" class="content-list__content">
+                <h3>Объявления</h3>
+                <p>Paris is the capital of France.</p>
+            </div>
+            
+            <div id="invitation" class="content-list__content">
+                <h3>Приглашения для СМИ</h3>
+                <p>Tokyo is the capital of Japan.</p>
             </div>
         </section>
     </main>
 </div>
-<!--Slick Slider-->
-<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-<script src="js/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+<!--Swiper Slider-->
+<script src="js/swiper/swiper-bundle.min.js"></script>
+
 <script src="js/script.js"></script>
 </body>
 </html>
