парвка до 23 февраля

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Сайт думы"> 
 	<meta name="Keywords" content="Ульяновская дума">
     <title>Дума</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" /> 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!--Swiper Slider-->
     <link rel="stylesheet" href="css/swiper/swiper-bundle.min.css" />
@@ -215,37 +216,37 @@
                         </form>
                         <ul class="my-deputat__list">
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/1.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Ножечкин<br>Илья Владимирович</h4>
-                                <span class="my-deputat__post">Председатель Ульяновской Городской Думы</span>
+                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/1.jpg" alt="" title=""></a>
+                                <a href="deputat.html"><span class="my-deputat__name">Ножечкин<br>Илья Владимирович</span></a>
+                                <a href="deputat.html"><span class="my-deputat__post">Председатель Ульяновской Городской Думы</span></a>
                                 <span class="my-deputat__district">Округ 29</span>
                                 <a class="my-deputat__email" href="mailto:nozhechkin@ugd.ru">nozhechkin@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/2.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Айзатуллина<br>Алсу Феритовна</h4>
-                                <span class="my-deputat__post">Первый заместитель председателя УГД</span>
+                                <a href="#"><img class="my-deputat__image" src="img/deputat/2.jpg" alt="" title=""></a>
+                                <a href="#"><span class="my-deputat__name">Айзатуллина<br>Алсу Феритовна</span></a>
+                                <a href="#"><span class="my-deputat__post">Первый заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 22</span>
                                 <a class="my-deputat__email" href="ayzatullina@ugd.ru">ayzatullina@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/3.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Крючков<br>Игорь Иванович</h4>
-                                <span class="my-deputat__post">Заместитель председателя УГД</span>
+                                <a href="#"><img class="my-deputat__image" src="img/deputat/3.jpg" alt="" title=""></a>
+                                <a href="#"><span class="my-deputat__name">Крючков<br>Игорь Иванович</span></a>
+                                <a href="#"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 11</span>
                                 <a class="my-deputat__email" href="kryuchkov@ugd.ru">kryuchkov@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/4.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Моргачев<br>Сергей Владимирович</h4>
-                                <span class="my-deputat__post">Заместитель председателя УГД</span>
+                                <a href="#"><img class="my-deputat__image" src="img/deputat/4.jpg" alt="" title=""></a>
+                                <a href="#"><span class="my-deputat__name">Моргачев<br>Сергей Владимирович</span></a>
+                                <a href="#"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 25</span>
                                 <a class="my-deputat__email" href="morgachev@ugd.ru">morgachev@ugd.ru</a>
                             </li>
                             <li class="my-deputat__item">
-                                <img class="my-deputat__image" src="img/deputat/5.jpg" alt="" title="">
-                                <h4 class="my-deputat__name">Буланов<br>Игорь Николаевич</h4>
-                                <span class="my-deputat__post">Заместитель председателя УГД</span>
+                                <a href="#"><img class="my-deputat__image" src="img/deputat/5.jpg" alt="" title=""></a>
+                                <a href="#"><span class="my-deputat__name">Буланов<br>Игорь Николаевич</span></a>
+                                <a href="#"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
                                 <span class="my-deputat__district">Округ 7</span>
                                 <a class="my-deputat__email" href="bulanov@ugd.ru">bulanov@ugd.ru</a>
                             </li>
