сверстал 2 страницы еще

--- a/app/deputat.html
+++ b/app/deputat.html
@@ -64,7 +64,7 @@
                 <h1 class="deputat__name">Ножечкин Илья Владимирович</h1>
                 <p class="deputat__subtitle">Председатель Ульяновской Городской Думы, Депутат Ульяновской Городской Думы VI созыва. Член Комитета по бюджету и налогам</p>
                 <div class="deputat__body">
-                    <img class="deputat__image" src="img/deputat/1.jpg" alt="Ножечкин Илья Владимирович" title="Ножечкин Илья Владимирович">
+                    <img class="deputat__image" src="img/deputat/1_1.jpg" alt="Ножечкин Илья Владимирович" title="Ножечкин Илья Владимирович">
                     <div class="deputat__contacts">
                         <span class="deputat__contacts-title">Контакты</span>
                         <ul class="deputat__contacts-list">
@@ -76,40 +76,115 @@
                         <button class="deputat__feed-btn">Отправить сообщение</button>
                     </div>
                     <div class="deputat__about">
-                        <span>О депутате</span>
-                        <p>Родился 10 сентября 1988 года в семье инженеров-строителей.</p>
-                        <p>Окончил гимназию №33 в Засвияжском районе.</p>
-                        <p>Высшее образование получил в Ульяновском Государственном Университете. В 2010 году окончил его с двумя «красными» дипломами.</p>
-                        <p>В 2011 году был назначен руководителем отдела по взаимодействию с территориальным общественным самоуправлением. За первый год работы организовал 35 активных коллективов ТОС. Теперь движение ТОС объединяет более 130 000 человек, на базе ТОС восстанавливается система дворовых тренеров и массового дворового спорта, проводятся конкурсы на получение грантов, реализуются проекты благоустройства.</p>
-                        <p>В 2012-2013 гг. Илья Ножечкин преподавал на курсах повышения квалификации старших по домам/председателей советов многоквартирных домов в УлГТУ и УлГУ.</p>
-                        <p></p>
-                        <p>В 2012 году организовал и возглавил Контакт-центр при Главе города Ульяновска, предоставляющий бесплатную юридическую помощь жителям города, прежде всего по вопросам ЖКХ, куда так же вошла созданная служба «05», которая взяла под контроль выполнение заявок от жителей всего города.
-
-С 2014 года Илье Ножечкину доверено руководить в Ульяновской области реализацией федерального проекта «Школа грамотного потребителя», цель которого обучение жителей правовой и компьютерной грамотности. В результате региональная ШГП вошла в число лучших по стране согласно общероссийскому рейтингу.
-
-В 2014 году избран депутатом по 22 избирательному округу в Засвияжском районе Ульяновска. 
-
-В 2015 году стал заместителем главы города и возглавил комитет по городскому хозяйству, транспорту и охране окружающей среды.
-
-18 июля 2018 года на заседании Городской Думы избран депутатами председателем. 
-Инициатор законопроекта по усилению контроля за пассажирскими перевозками в Ульяновской области, который вступил в силу и позволяет лишать лицензии перевозчиков за неоднократное нарушение графика движения.
-
-В 2019 году вошел в состав Палаты молодых законодателей при Совете Федерации Федерального Собрания РФ. Избран заместителем председателя.
-
-В 2020 году с отличием окончил магистратуру в РАНХиГС при Президенте РФ, получил степень магистра политологии по направлению подготовки «Экономическая политология».
-
-В 2020 году избран депутатом Городской Думы VI созыва по 29 избирательному округу в Засвияжском районе Ульяновска. 
-
-30 сентября 2020 года на заседании Городской Думы избран депутатами председателем. 
-
-Эффективная работа Ильи Ножечкина неоднократно отмечена руководством города. 
-В 2019 году получил благодарственное письмо от Председателя правления Общенациональной ассоциации территориального местного самоуправления за личный вклад в развитие территориального общественного самоуправления в городе Ульяновске. В 2019 году награжден почетным знаком Россотрудничества «За дружбу и сотрудничество». В 2020 году за активное участие в жизни общественных организаций, защищающих права граждан, награжден почетным знаком «За заслуги, гуманность и милосердие» второй степени от Союза Чернобыльцев России. За участие в организации празднования 75-летия Победы и за проделанную работу по продвижению инициативы по присвоению городу Ульяновску звания «Город трудовой доблести» награждён почетным знаком Ульяновской области. 
-
-Наша страна – многонациональна, в ней проживает почти двести различных народов. Только в нашей стране говорят на 277 языках и диалектах. Но всех нас объединяет Россия и любовь к своей стране.
-
-Женат, воспитывает двух детей. 
+                        <button id="about__more">Показать</button>
+                        <span class="deputat__about-title">О депутате</span>
+                        <p class="deputat__about-text">Родился 10 сентября 1988 года в семье инженеров-строителей.</p>
+                        <p class="deputat__about-text">Окончил гимназию №33 в Засвияжском районе.</p>
+                        <p class="deputat__about-text">Высшее образование получил в Ульяновском Государственном Университете. В 2010 году окончил его с двумя «красными» дипломами.</p>
+                        <p class="deputat__about-text">В 2011 году был назначен руководителем отдела по взаимодействию с территориальным общественным самоуправлением. За первый год работы организовал 35 активных коллективов ТОС. Теперь движение ТОС объединяет более 130 000 человек, на базе ТОС восстанавливается система дворовых тренеров и массового дворового спорта, проводятся конкурсы на получение грантов, реализуются проекты благоустройства.</p>
+                        <p class="deputat__about-text">В 2012-2013 гг. Илья Ножечкин преподавал на курсах повышения квалификации старших по домам/председателей советов многоквартирных домов в УлГТУ и УлГУ.</p>
+                        <p class="deputat__about-text">В 2012 году организовал и возглавил Контакт-центр при Главе города Ульяновска, предоставляющий бесплатную юридическую помощь жителям города, прежде всего по вопросам ЖКХ, куда так же вошла созданная служба «05», которая взяла под контроль выполнение заявок от жителей всего города.</p>
+                        <p class="deputat__about-text">С 2014 года Илье Ножечкину доверено руководить в Ульяновской области реализацией федерального проекта «Школа грамотного потребителя», 
+                        цель которого обучение жителей правовой и компьютерной грамотности. В результате региональная ШГП вошла в число лучших по стране согласно общероссийскому рейтингу.</p>
+                        <p class="deputat__about-text">В 2014 году избран депутатом по 22 избирательному округу в Засвияжском районе Ульяновска. </p>
+                        <p class="deputat__about-text">В 2015 году стал заместителем главы города и возглавил комитет по городскому хозяйству, транспорту и охране окружающей среды.</p>
+                        <p class="deputat__about-text">18 июля 2018 года на заседании Городской Думы избран депутатами председателем. </p>
+                        <p class="deputat__about-text">Инициатор законопроекта по усилению контроля за пассажирскими перевозками в Ульяновской области, который вступил в силу и позволяет лишать 
+                        лицензии перевозчиков за неоднократное нарушение графика движения.</p>
+                        <p class="deputat__about-text">В 2019 году вошел в состав Палаты молодых законодателей при Совете Федерации Федерального Собрания РФ. Избран заместителем председателя.</p>
+                        <p class="deputat__about-text">В 2020 году с отличием окончил магистратуру в РАНХиГС при Президенте РФ, получил степень магистра политологии по направлению подготовки «Экономическая политология».</p>
+                        <p class="deputat__about-text">В 2020 году избран депутатом Городской Думы VI созыва по 29 избирательному округу в Засвияжском районе Ульяновска. </p>
+                        <p class="deputat__about-text">30 сентября 2020 года на заседании Городской Думы избран депутатами председателем. </p>
+                        <p class="deputat__about-text">Эффективная работа Ильи Ножечкина неоднократно отмечена руководством города. </p>
+                        <p class="deputat__about-text">В 2019 году получил благодарственное письмо от Председателя правления Общенациональной ассоциации территориального местного самоуправления 
+                            за личный вклад в развитие территориального общественного самоуправления в городе Ульяновске. В 2019 году награжден почетным знаком Россотрудничества 
+                            «За дружбу и сотрудничество». В 2020 году за активное участие в жизни общественных организаций, защищающих права граждан, награжден почетным знаком 
+                            «За заслуги, гуманность и милосердие» второй степени от Союза Чернобыльцев России. За участие в организации празднования 75-летия Победы и за 
+                            проделанную работу по продвижению инициативы по присвоению городу Ульяновску звания «Город трудовой доблести» награждён почетным знаком Ульяновской области. </p>
+                        <p class="deputat__about-text">Наша страна – многонациональна, в ней проживает почти двести различных народов. Только в нашей стране говорят на 277 языках и диалектах. 
+                        Но всех нас объединяет Россия и любовь к своей стране.</p>
+                        <p class="deputat__about-text">Женат, воспитывает двух детей. </p>
                     </div>
                 </div>
+            </section>
+            <section class="izbir-okrug">
+                <h2 class="izbir-okrug__title">Избирательный округ 29</h2>
+                <div class="izbir-okrug__body">
+                    <img class="izbir-okrug__image" src="img/deputat/district.jpg" alt="" title="">
+                    <span class="izbir-okrug__title-litle">Границы округа:</span>
+                    <p class="izbir-okrug__text">ул. Александровская: все дома;</p>
+                    <p class="izbir-okrug__text">ул. Ефремова: №№ 88, 90, 92, 98, 100, 102, 102а, 104, 106, 108, 108а, 111, 112, 113, 115, 116, 116а, 117, 117а (д/с), 119, 120, 121, 121а (д/с), 123, 123а (д/с), 124, 124а, 125, 127, 128, 129, 130, 130а, 133, 135, 137, 139, 141, 142, 143, 145, 145а (шк.), 145б (адм.), 147, 149, 151, 152, 153, 198, новые дома;</p>
+                    <p class="izbir-okrug__text">ул. Отрадная: №№ 73, 75, 76, 77, 79, 79 корпус 1, 79 корпус 2, 79 корпус 3, 79 корпус 4, 81, 83, 85, 85а, 87 (маг.);</p>
+                    <p class="izbir-okrug__text">ул. Богдана Хитрово: все дома;</p>
+                    <p class="izbir-okrug__text">ул. Рябикова: №№ 85, 85а, 106, 110, 110 корп.1, 112, 114, 116, 118, 122, 124 строение 1, 124 строение 2;</p>
+                    <p class="izbir-okrug__text">ул. Шигаева: № 3, 5, 7, 9, 11, 13, 15, 17, 18 (маг.), 19;</p>
+                    <p class="izbir-okrug__text">ул. Камышинская: №№ 32 (шк.), 34, 36, 40 (дом быта), 42, 42а, 44 (ГОУ коррекц. школа-интернат), 48, 50.</p>
+                </div>
+            </section>
+            <section class="thanks">
+                <h2 class="thanks__title">Благодарности</h2>
+                <ul class="thanks__list">
+                    <li class="thanks__item">
+                        <div class="thanks__image">
+                            <img src="img/deputat/thanks.jpg" alt="" title="">
+                        </div>
+                        <p class="thanks__name">Благодарность<br>Шеянову В.К., Борисову В.В. от жильцов дома №125 по ул. Ефремова</p>
+                    </li>
+                    <li class="thanks__item">
+                        <div class="thanks__image">
+                            <img src="img/deputat/thanks.jpg" alt="" title="">
+                        </div>
+                        <p class="thanks__name">Благодарность<br>Шеянову В.К., Борисову В.В. от жильцов дома №125 по ул. Ефремова</p>
+                    </li>
+                    <li class="thanks__item">
+                        <div class="thanks__image">
+                            <img src="img/deputat/thanks.jpg" alt="" title="">
+                        </div>
+                        <p class="thanks__name">Благодарность<br>Шеянову В.К., Борисову В.В. от жильцов дома №125 по ул. Ефремова</p>
+                    </li>
+                    <li class="thanks__item">
+                        <div class="thanks__image">
+                            <img src="img/deputat/thanks.jpg" alt="" title="">
+                        </div>
+                        <p class="thanks__name">Благодарность<br>Шеянову В.К., Борисову В.В. от жильцов дома №125 по ул. Ефремова</p>
+                    </li>
+                    <li class="thanks__item">
+                        <div class="thanks__image">
+                            <img src="img/deputat/thanks.jpg" alt="" title="">
+                        </div>
+                        <p class="thanks__name">Благодарность<br>Шеянову В.К., Борисову В.В. от жильцов дома №125 по ул. Ефремова</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="about-deputat">
+                <h2 class="about-deputat__title">О депутате на сайте:</h2>
+                <ul class="about-deputat__list">
+                    <li class="about-deputat__item">
+                        <img class="about-deputat__image" src="img/deputat/food.jpg" alt="" title="">
+                        <div class="about-deputat__item-body">
+                            <p class="about-deputat__name">Проблему транспортной доступности в поселке Мостостроителей планируют решить в 2022 году</p>
+                            <p class="about-deputat__text">Этот вопрос обсудили на встрече жителей с депутатом по округу Игорем Булановым, представителями Управления дорожного хозяйства и транспорта администрации города Ульяновска и другими... </p>
+                            <p class="about-deputat__info"><span class="about-deputat__date">06.11.2021</span> <a href="#" class="about-deputat__more">Подробнее</a></p>
+                        </div>
+                    </li>
+                    <li class="about-deputat__item">
+                        <img class="about-deputat__image" src="img/deputat/food.jpg" alt="" title="">
+                        <div class="about-deputat__item-body">
+                            <p class="about-deputat__name">Проблему транспортной доступности в поселке Мостостроителей планируют решить в 2022 году</p>
+                            <p class="about-deputat__text">Этот вопрос обсудили на встрече жителей с депутатом по округу Игорем Булановым, представителями Управления дорожного хозяйства и транспорта администрации города Ульяновска и другими... </p>
+                            <p class="about-deputat__info"><span class="about-deputat__date">06.11.2021</span> <a href="#" class="about-deputat__more">Подробнее</a></p>
+                        </div>
+                    </li>
+                    <li class="about-deputat__item">
+                        <img class="about-deputat__image" src="img/deputat/food.jpg" alt="" title="">
+                        <div class="about-deputat__item-body">
+                            <p class="about-deputat__name">Проблему транспортной доступности в поселке Мостостроителей планируют решить в 2022 году</p>
+                            <p class="about-deputat__text">Этот вопрос обсудили на встрече жителей с депутатом по округу Игорем Булановым, представителями Управления дорожного хозяйства и транспорта администрации города Ульяновска и другими... </p>
+                            <p class="about-deputat__info"><span class="about-deputat__date">06.11.2021</span> <a href="#" class="about-deputat__more">Подробнее</a></p>
+                        </div>
+                    </li>
+                </ul>
+
             </section>
 
             <footer class="footer">
