Добавил старницу история

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
             </form>
             <nav class="left-side__navigation">
                 <ul>
-                    <li><a href="#" rel="noopener">О Думе</a></li>
+                    <li><a href="history.html" rel="noopener">О Думе</a></li>
                     <li><a href="deputats.html" rel="noopener">Депутаты</a></li>
                     <li><a href="#" rel="noopener">Деятельность</a></li>
                     <li><a href="#" rel="noopener">Приёмная</a></li>
